<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">查成绩Demo</string>
    <string name="login">登陆</string>
    <string name="refresh">更新成绩</string>
    <string name="user">学号</string>
    <string name="password">密码</string>
    <string name="clear">清除</string>
    <string name="user_hint">请输入学号</string>
    <string name="password_hint">请输入密码</string>
    <string name="auth_code">验证码</string>
    <string name="auth_hint">请输入验证码</string>

</resources>
