<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="5" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/user"
            android:textSize="@dimen/fontsize" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="0"
            android:ems="10"
            android:hint="@string/user_hint"
            android:textSize="@dimen/fontsize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/password"
            android:textSize="@dimen/fontsize" />

        <EditText
            android:id="@+id/editText2"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/fontsize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="@string/auth_code"
            android:textSize="@dimen/fontsize" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="2"
            android:ems="10"
            android:hint="@string/auth_hint"
            android:maxLength="4"
            android:textSize="@dimen/fontsize" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_column="1"
            android:layout_gravity="right|center_vertical"
            android:layout_row="2"
            android:contentDescription="@string/auth_hint"
            android:onClick="changeAuthCode"
            android:src="@raw/img" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="login"
            android:text="@string/login"
            android:textSize="@dimen/fontsize" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="clear"
            android:text="@string/clear"
            android:textSize="@dimen/fontsize" />
    </LinearLayout>

</LinearLayout>